--- a/SpaceshipClicker/SpaceshipClicker.Web/wwwroot/css/site.css
+++ b/SpaceshipClicker/SpaceshipClicker.Web/wwwroot/css/site.css
@@ -291,6 +291,16 @@ li.sc-review:hover {
     margin: 19px auto;
 }
 
+.sc-spaceship-img:hover {
+    cursor: pointer;
+}
+
+.sc-spaceship-img:active {
+    width: 300px;
+    height: 400px;
+    margin: 49px auto;
+}
+
 .sc-crewmate-ul {
     padding: 0;
     list-style-type: none;
@@ -302,16 +312,31 @@ li.sc-review:hover {
 
 .sc-crewmate-ul > .sc-crewmate {
     width: 100%;
-    height: 80px;
+    height: 90px;
     margin: 15px 0;
     background-color: #3498DB;
     border-bottom: solid 4px #ECF0F1;
 }
 
 .sc-crewmate > img {
-    width: 60px;
-    height: 60px;
+    width: 70px;
+    height: 70px;
     margin: 10px;
+    position: relative;
+    top: -23px;
+}
+
+.sc-crewmate-locked {
+    font-size: 40px;
+    padding: 15px 150px;
+}
+
+.sc-crewmate-info {
+    display: inline-block;
+    line-height: 16px;
+    width: 70%;
+    margin-top: 10px;
+    font-weight: 600;
 }
 
 .sc-upgrades-ul {
@@ -349,8 +374,8 @@ li.sc-review:hover {
     text-align: center;
 }
 
-.sc-upgrade:hover,
-.sc-crewmate:hover {
+.sc-upgrade[unlocked="unlocked"]:hover,
+.sc-crewmate[unlocked="unlocked"]:hover {
     cursor: pointer;
     background-color: #ECF0F1;
     border-color: #3498DB;
@@ -361,6 +386,61 @@ li.sc-review:hover {
     margin-right: 0;
 }
 
+.sc-game-btns {
+    list-style-type: none;
+    padding: 0;
+}
+
+.sc-game-btns > li {
+    font-size: 16px;
+    font-weight: 500;
+    text-align: center;
+    display: inline-block;
+    width: 140px;
+    height: 60px;
+    background-color: #3498DB;
+    color: #ECF0F1;
+    border-bottom: solid 4px #ECF0F1;
+}
+
+.sc-game-btns > li > span {
+    display: block;
+    margin-top: 17px;
+}
+
+.sc-game-btns > li:hover {
+    cursor: pointer;
+    background-color: #ECF0F1;
+    color: #3498DB;
+    border-bottom: solid 4px #3498DB;
+}
+
+.sc-game-btns > .sc-tab {
+    margin-right: 19px;
+}
+
+.sc-notifications {
+    width: 100%;
+    font-size: 16px;
+    resize: none;
+    margin-bottom: 10px;
+    color: #2C3E50;
+    border-bottom: solid 4px #3498DB;
+}
+
+.sc-messages {
+    width: 100%;
+    font-size: 16px;
+    resize: none;
+    margin-bottom: 10px;
+    color: #E74C3C;
+    border-bottom: solid 4px #3498DB;
+}
+
+.sc-notifications-label {
+    font-size: 24px;
+    margin: 20px 0 16px 0;
+}
 /*End game css*/
 
 .sc-footer {
