--- a/SpaceshipClicker/SpaceshipClicker.Web/Areas/Game/Views/_ViewImports.cshtml
+++ b/SpaceshipClicker/SpaceshipClicker.Web/Areas/Game/Views/_ViewImports.cshtml
@@ -1,1 +1,2 @@
-﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@using SpaceshipClicker.Web.Areas.Game.Models
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
