--- a/SpaceshipClicker/SpaceshipClicker.Web/Views/Shared/_LoginPartial.cshtml
+++ b/SpaceshipClicker/SpaceshipClicker.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,8 +1,10 @@
 @using Microsoft.AspNetCore.Identity
 @using SpaceshipClicker.Data.Models
+@using SpaceshipClicker.Services;
 
 @inject SignInManager<User> SignInManager
 @inject UserManager<User> UserManager
+@inject IReviewService Reviews
 
 @if (SignInManager.IsSignedIn(User))
 {
@@ -32,7 +34,27 @@
                         <li><a href="/Admin/Reviews/List/1">As Admin</a></li>
                     </ul>
                 </li>
-            } 
+            }
+            else
+            {
+                if (await Reviews.HasUserPostedReviewAsync(UserManager.GetUserName(User)))
+                {
+                    <li>
+                        <a href="/Reviews/List/DateDescending">Reviews</a>
+                    </li>
+                }
+                else
+                {
+                    <li>
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Reviews<span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu sc-dropdown-menu">
+                            <li><a href="/Reviews/List/DateDescending">All</a></li>
+                            <li><a href="/Reviews/Post">Write</a></li>
+                        </ul>
+                    </li>
+                }
+            }
             <li class="sc-logout-fix">
                 <button type="submit" class="btn btn-link navbar-btn navbar-link">Log out</button>
             </li>
